--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "finchsfingernails",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://finchsfingernails.rocks",
+  "homepage": "https://switch2512.github.io/finchsfingernails",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
