--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://switch2512.github.io/",
   "name": "finchsfingernails",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://switch2512.github.io/",
+  "private": true,
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -20,10 +20,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
